Closed Bug 1495463 Opened 6 years ago Closed 6 years ago

Gecko Profiler crash on macOS 10.14: [@ nsThread::ShutdownInternal | nsThread::Shutdown | mozilla::layers::ProfilerScreenshots::~ProfilerScreenshots ]

Categories

(Core :: Gecko Profiler, defect)

Unspecified
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox-esr60 --- unaffected
firefox62 --- wontfix
firefox63 --- wontfix
firefox64 --- fixed

People

(Reporter: cpeterson, Assigned: mstange)

References

(Blocks 1 open bug)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

I can reproduce this ProfilerScreenshots crash every time when using the Gecko Profiler in Firefox 64 Nightly on macOS 10.14 Mojave. STR: 1. Install the Gecko Profiler. 2. In the profiler's toolbar menu, click the "Start" button. 3. In the profiler's toolbar menu, click the "Discard & Stop" button. RESULT: CRASH! bp-ada1077f-cac7-46a1-8cdc-8d0640180929 bp-ba4e49aa-4b26-432d-a89b-3a5620180929 bp-61322f3c-1f36-4cfb-804d-f1eb00180929
This hits the release assert "Shutdown() may only be called from an XPCOM thread" which was added in bug 1494513. And it's right - we're trying to shut down the ProfilerScreenshots thread from the compositor thread. Kris, any ideas for how this should be done?
Blocks: 1494513
Flags: needinfo?(kmaglione+bmo)
(In reply to Markus Stange [:mstange] from comment #1) > This hits the release assert "Shutdown() may only be called from an XPCOM > thread" which was added in bug 1494513. > > And it's right - we're trying to shut down the ProfilerScreenshots thread > from the compositor thread. > > Kris, any ideas for how this should be done? Dispatching a runnable to the main thread is probably your best bet.
Flags: needinfo?(kmaglione+bmo)
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/ed764e9bab67 Shut down the ProfilerScreenshots thread from the main thread. r=kmag
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: