Bug 1495463 - Shut down the ProfilerScreenshots thread from the main thread. r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D7367

--HG--
extra : moz-landing-system : lando